@@ -466,6 +466,8 @@ void PreferencesDlg::slotTabChange(int index)
                                                       SETTINGS_DISPLAY_MAX_STRING_DEFAULT).toInt());
         ui.showusernameChkBox->setChecked(ttSettings->value(SETTINGS_DISPLAY_SHOWUSERNAME,
                                                             SETTINGS_DISPLAY_SHOWUSERNAME_DEFAULT).toBool());
+        ui.emojiChkBox->setChecked(ttSettings->value(SETTINGS_DISPLAY_EMOJI,
+                                                     SETTINGS_DISPLAY_EMOJI_DEFAULT).toBool());
 
         ui.languageBox->clear();
         ui.languageBox->addItem("");
@@ -671,6 +673,7 @@ void PreferencesDlg::slotSaveChanges()
         ttSettings->setValue(SETTINGS_DISPLAY_APPUPDATE, ui.updatesChkBox->isChecked());
         ttSettings->setValue(SETTINGS_DISPLAY_MAX_STRING, ui.maxtextSpinBox->value());
         ttSettings->setValue(SETTINGS_DISPLAY_SHOWUSERNAME, ui.showusernameChkBox->isChecked());
+        ttSettings->setValue(SETTINGS_DISPLAY_EMOJI, ui.emojiChkBox->isChecked());
 
         int index = ui.languageBox->currentIndex();
         if(index >= 0)
